# claude-code-proxy

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  flake.nix  justfile  package.json
.githooks/: format-staged.ts  pre-commit  pre-push
.github/workflows/: nix.yml  release.yml
scripts/: debug-proxy  install.sh  watch-claude-workflow-failures
src/: auth.rs  cli.ts  config.rs  config.test.ts  config.ts  count-tokens.ts  diagnostics.rs  keychain.ts  lib.rs  log.ts  logging.rs  main.rs  monitor.rs  oauth_http.rs  oauth_rotation.rs  paths.rs  paths.test.ts  paths.ts  provider.rs  registry.rs  retry.rs  server.rs  server.test.ts  server.ts  session.rs  sse.ts  timeutil.rs  traffic.rs  traffic.ts  tui.rs  upstream_http.rs
src/anthropic/: mod.rs  schema.ts  sse.rs
src/monitor/: mock.rs
src/providers/: mod.rs  registry.test.ts  registry.ts  retry.test.ts  retry.ts  token_count_admission.rs  translate_shared.rs  types.ts
src/providers/codex/: client.rs  client.ts  continuation.rs  count-tokens.ts  count_tokens.rs  dispatch_budget.rs  events.rs  index.test.ts  index.ts  mod.rs  request_summary.rs  websocket.rs  websocket.test.ts  websocket.ts
src/providers/codex/auth/: browser_login.rs  constants.ts  device.rs  device.ts  jwt.ts  manager.rs  manager.ts  pkce.rs  pkce.ts  token-store.ts  token_store.rs
src/providers/codex/translate/: accumulate.rs  accumulate.ts  live_stream.rs  mod.rs  model-allowlist.test.ts  model-allowlist.ts  model_allowlist.rs  read_rewrite.rs  reasoning_signature.rs  reducer.rs  reducer.ts  request.rs  request.test.ts  request.ts  schema_bridge.rs  stream.rs  stream.test.ts  stream.ts  tool_policy.rs  web_search_compat.rs
src/providers/cursor/: auth.rs  client.rs  client.test.ts  connect.rs  index.ts  mod.rs  model.rs  proto.rs  request.rs  response.rs  sse.rs  tool_bridge.rs  tool_use_xml.rs
src/providers/cursor/auth/: login.ts  token-parser.ts  token-store.ts
src/providers/cursor/translate/: catalog.ts  model.test.ts  model.ts
src/providers/grok/: client.rs  count_tokens.rs  mod.rs  text.rs
src/providers/grok/auth/: device.rs  login.rs  manager.rs  token_store.rs
src/providers/grok/translate/: accumulate.rs  mod.rs  model_allowlist.rs  reducer.rs  request.rs  stream.rs  tool_policy.rs
src/providers/kimi/: client.rs  client.ts  count-tokens.ts  index.ts  mod.rs
src/providers/kimi/auth/: constants.ts  device-id.ts  device_id.rs  headers.rs  headers.ts  jwt.ts  login.rs  login.ts  manager.rs  manager.ts  token-store.ts
src/providers/kimi/translate/: accumulate.ts  model-allowlist.ts  reducer.ts  request.rs  request.test.ts  request.ts  signature.ts  stream.ts
src/providers/shared/: upstream-errors.ts
src/providers/shared/auth/: atomic-write.ts  token-store.ts
src/providers/translate/: accumulate.ts
src/translate/: request.test.ts  request.ts  stream.ts
tests/: cli.rs  codex_auth.rs  codex_websocket.rs  cursor_native.rs  foundation.rs  release_security.rs  request_client_policy.rs  server.rs  smoke_cutover.rs
