[package]
name = "claude-code-proxy"
version = "0.1.24-preview.1"
description = "Anthropic-compatible proxy for Claude Code provider backends"
edition = "2024"
authors = ["Claude Code Proxy contributors"]
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = { version = "0.48.2", default-features = false }
anyhow = "1.0"
thiserror = "2.0"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time", "fs"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
httpdate = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client-proxy", "client-proxy-system"] }
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tiktoken-rs = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots", "system-proxy", "blocking", "http2"] }
base64 = "0.22"
gif = { version = "0.14.2", default-features = false, features = ["std"] }
image-webp = "0.2.4"
png = "0.18.1"
zune-core = { version = "0.5.1", default-features = false, features = ["std"] }
zune-jpeg = { version = "0.5.15", default-features = false, features = ["std"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
fs2 = "0.4"
hostname = "0.4"
once_cell = "1.20"
regex-lite = "0.1"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
url = "2"
prost = "0.13"
flate2 = "1.0"
ratatui = "0.29"
crossterm = "0.28"
jiff = { version = "0.2", default-features = false, features = ["std", "tz-system", "tzdb-zoneinfo"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = { version = "0.3", features = ["extended-siginfo"] }

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2"
predicates = "3"
jpeg-encoder = "0.7.0"
